@@ -3,8 +3,8 @@
 from setuptools import setup
 from twill.twill_build_utils import twill_build_py
 
-#from ez_setup import use_setuptools
-#use_setuptools()
+from ez_setup import use_setuptools
+use_setuptools()
 
 #### twill info.
 
